--- a/scss/sprites.scss
+++ b/scss/sprites.scss
@@ -2,7 +2,7 @@
 
 /* icons */
 
-// $icons-download_arrow-position: 100%;
+ $icons-bullet-spacing:30px;
 // $icons-link_arrows-right-position: 100%;
 // $icons-link_arrows-left-spacing:7px;
 // $icons-link_arrows-right-spacing:7px;
