--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,7 +19,7 @@ $gold:          #9A6100;
 $light_gold:    #FFCC00;
 $dark_gold:     #845412;
 
-$green:         #5F7232;
+$green:         #76A228;
 $light_green:   #B2E053;
 $dark_green:    #52642A;
 
@@ -51,7 +51,7 @@ h1 {
 
 h2, h3, h4, h5 { font-family: "Helvetica Neue", sans-serif; }
 
-h2 { font-size: 18px; font-weight:bold; }
+h2 { font-size: 21px; font-weight:bold; }
 h3 { font-size: 14px; font-weight:bold; }
 h4 { font-size: 11px; font-weight:bold; }
 
@@ -93,37 +93,37 @@ nav {
 #map { height: 100%; }
 
 /* Basic infobox */
-
 .box {
-    $header_height: 119px;
+    $width: 304px;
+    $pT: 22px;
+    $pB: 27px;
+    $pR: 24px;
+    $pL: 35px;
 
     position:relative;
-    width: 304px;
-
-    .header {
-        background: url(../img/backgrounds/bkg_box_top_gold.png) repeat-y;
-        position:absolute;
-        width: 304px - 35*2;
-        height:$header_height - 70;
-        top:-$header_height;
-        padding: 35px;
-
-        hgroup { // header titles
-            width: 220px;
-
-            h2 { color:#fff; @include text-shadow(1px 1px 1px $dark_gold); line-height:22px;}
-            h4 { @include text-shadow(1px 1px 1px $light_gold); margin: 0 0 6px 0; color:$gold; opacity:.6; text-transform:uppercase; }
-        }
-    } // header
+    width: $width;
 
     .content {
+        .header {
+            hgroup { // header titles
+                width: 230px;
 
-        width: 304px - 43*2;
-        padding: 29px 43px 24px 43px;
-        background:url(../img/backgrounds/bkg_boxes.png) repeat-y -944px top;
+                h2 { padding: 0 0 19px 0; margin: 0 0 19px 0; font-family: 'News Cycle', sans-serif; color:$dark_gray; border-bottom: 2px solid $dark_gray; line-height:22px;}
+                h4 { margin: 0 0 6px 0; color:$gold; opacity:.6; text-transform:uppercase; }
+            }
+        } // header
+
+        width: $width - $pL - $pR;
+        padding: $pT $pR $pB $pL;
+        background:url(../img/backgrounds/bkg_box.png) repeat-y -305px top;
 
     } // content
-    .footer { width:100%; background:url(../img/backgrounds/bkg_boxes.png) no-repeat -631px bottom; height:13px; position:absolute; left: 0; bottom: -13px; }
+
+    // top & bottom
+    $endsHeight: 15px;
+    .t, .b { position:absolute; width:100%; background:url(../img/backgrounds/bkg_box.png) no-repeat left bottom; height:$endsHeight; left: 0; }
+    .t { top: -1*$endsHeight; background-position:-610px bottom;}
+    .b { bottom: -1*$endsHeight; background-position:left bottom;}
 } // box
 
 // Infobox content elements
@@ -134,8 +134,8 @@ nav {
         h4 { margin: 0 0 5px 0; text-transform: uppercase; color:$light_gray; }
 
         ul { 
-            list-style:square;
-            margin: 0 0 29px 0;
+            list-style:none;
+            margin: 0 0 19px 0;
 
             &:last-child { margin: 0; }
 
@@ -144,8 +144,12 @@ nav {
                 color: $dark_gray;
                 font-size:15px;
                 line-height:22px;
+                padding-left: 9px;
+                margin-left: -9px;
+                @include icons-sprite(bullet, $offset-y: 9px);
+                &:last-child { margin-bottom: 0; }
 
-                a { font-size:15px; color: #333333; text-transform: none; font-weight:normal; border-bottom: 1px dotted #4C4C4C; }
+                a { font-size:15px; color: #333333; text-transform: none; font-weight:normal; padding: 0 0 2px 0; border-bottom: 1px dashed $subtle_gray; }
             }
         } // ul
 
@@ -156,45 +160,29 @@ nav {
 
 /* Golden box */
 .box.golden {
-    .header { background: url(../img/backgrounds/bkg_box_top_gold.png) repeat-y; }
 
     .header hgroup { // header titles
-        @include text-shadow(1px 1px 1px $light_gold);
-        h2 { color:#fff; @include text-shadow(1px 1px 1px $dark_gold);}
+        h2 { border-color:$gold; }
         h4 { color:$gold; }
     }
-
-    .content { background-position: -944px top; }
-    .footer { background-position: -631px bottom; }
 } // golden box
 
 /* Green box */
 .box.green {
-    .header { background: url(../img/backgrounds/bkg_box_top_green.png) repeat-y; }
-
     .header hgroup { // header titles
 
-        h2 { color:#fff; @include text-shadow(1px 1px 1px $dark_green);}
-        h4 { @include text-shadow(1px 1px 1px $light_green); color:$green; }
+        h2 { border-color:$green; }
+        h4 { color:$green; }
     }
-
-    .content { background-position: -308px top; }
-    .footer { background-position: left bottom; }
 } // green box
 
 
 /* Blue box */
 .box.blue {
-    .header { background: url(../img/backgrounds/bkg_box_top_blue.png) repeat-y; }
-
     .header hgroup { // header titles
-
-        h2 { color:#fff; @include text-shadow(1px 1px 1px $dark_blue);}
-        h4 { @include text-shadow(1px 1px 1px $light_blue); color:$blue; }
+        h2 { border-color:$blue; }
+        h4 { color:$blue; }
     }
-
-    .content { background-position: -1566px top; }
-    .footer { background-position: -1259px bottom; }
 } // blue box
 
 // Temporary positioning TODO: get rid of it
@@ -284,7 +272,7 @@ nav ul li .filter.view {
             width:172px;
             padding: 0;
             margin:0;
-            
+
             $liLeftMargin: 14px;
 
             &.symbols {
